--- a/pom.xml
+++ b/pom.xml
@@ -87,14 +87,14 @@
             <version>2.1.5</version>
         </dependency>
 
-      <!--  &lt;!&ndash;pagehelper &ndash;&gt;
+        <!--pagehelper -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.12</version>
         </dependency>
 
-        &lt;!&ndash; apache 工具类 &ndash;&gt;
+        <!-- apache 工具类 -->
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
@@ -111,8 +111,8 @@
             <version>1.3.2</version>
         </dependency>
 
-        &lt;!&ndash; swagger2 配置 &ndash;&gt;
-        <dependency>
+        <!-- swagger2 配置 -->
+        <!--<dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>2.4.0</version>
@@ -126,10 +126,10 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>swagger-bootstrap-ui</artifactId>
             <version>1.6</version>
-        </dependency>
+        </dependency>-->
 
-        &lt;!&ndash;引入日志依赖 抽象层 与 实现层&ndash;&gt;
-        <dependency>
+        <!--引入日志依赖 抽象层 与 实现层-->
+       <!-- <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.21</version>
@@ -139,6 +139,13 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.21</version>
         </dependency>-->
+
+        <!-- Lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+        </dependency>
 
         <!-- 打包war [3] 添加依赖 -->
        <!-- <dependency>
