--- a/foodie-dev-api/pom.xml
+++ b/foodie-dev-api/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>foodie-dev-api</artifactId>
 
+    <packaging>jar</packaging>
+    <!-- 打包方式[1] 添加打包方式 -->
+<!--    <packaging>war</packaging>-->
+
     <dependencies>
         <!--
             common-mail
@@ -28,6 +32,15 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- 打包war [3] 添加依赖 -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
+
 
 </project>
