--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>foodie-dev-api</module>
         <module>foodie-payment</module>
         <module>foodie-sso</module>
+        <module>foodie-dev-search</module>
     </modules>
 
     <!--
