--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>foodie-payment</module>
         <module>foodie-sso</module>
         <module>foodie-dev-search</module>
+        <module>foodie-dev-fs</module>
     </modules>
 
     <!--
@@ -84,16 +85,16 @@
         </dependency>
 
         <!-- 引入Spring-session依赖 -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
 
-        <!-- 引入Spring安全框架 -->
+        &lt;!&ndash; 引入Spring安全框架 &ndash;&gt;
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+        </dependency>-->
 
         <!-- 引入 redis 依赖 -->
         <dependency>
