--- a/foodie-dev-api/src/main/resources/application-dev.yml
+++ b/foodie-dev-api/src/main/resources/application-dev.yml
@@ -3,7 +3,8 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://192.168.8.116:3306/foodie-shop-dev?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+    # Mycat配置
+    url: jdbc:mysql://192.168.8.116:8066/foodie-shop-dev?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
     password: root
   redis:
   # Redis 单实例
