--- a/foodie-dev-common/pom.xml
+++ b/foodie-dev-common/pom.xml
@@ -14,5 +14,11 @@
 
     <artifactId>foodie-dev-common</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.11.2</version>
+        </dependency>
+    </dependencies>
 </project>
